--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t Askerer/docker-react -f Dockerfile.dev .
+  - docker build -t askerer/docker-react -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true Askerer/docker-react npm run test
